Links internos do html padronizados, sem "/" no inicio.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="O refúgio definitivo para quem busca privacidade e experiências inesquecíveis.">
     <title>Motel Korpus - Experiência Exclusiva</title>
 
-    <link rel="icon" type="image/svg+xml" href="/assets/svgs/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="assets/svgs/favicon.svg">
 
     <link rel="preload" href="assets/fonts/inter-regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="assets/fonts/playfair-regular.woff2" as="font" type="font/woff2" crossorigin>
@@ -19,7 +19,7 @@
       "@context": "https://schema.org",
       "@type": "LodgingBusiness",
       "name": "Motel Korpus",
-      "image": "https:///site.com.br/assets/imagens/og-imagem.png",
+      "image": "https:///korpusmotel.com.br/assets/imagens/og-imagem.png",
       "description": "O refúgio definitivo para quem busca privacidade e experiências inesquecíveis.",
       "priceRange": "$$$",
       "address": {
