Ajustes de textos no index.html.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="O refúgio definitivo para quem busca privacidade e experiências inesquecíveis.">
-    <title>Motel Korpus - Experiência Exclusiva</title>
+    <title>Korpus Motel- Experiência Exclusiva</title>
 
     <link rel="icon" type="image/svg+xml" href="assets/svgs/favicon.svg">
 
@@ -18,7 +18,7 @@
     {
       "@context": "https://schema.org",
       "@type": "LodgingBusiness",
-      "name": "Motel Korpus",
+      "name": "Korpus Motel",
       "image": "https:///korpusmotel.com.br/assets/imagens/og-imagem.png",
       "description": "O refúgio definitivo para quem busca privacidade e experiências inesquecíveis.",
       "priceRange": "$$$",
@@ -900,7 +900,7 @@
 
             <div
                 class="pt-8 border-t border-white/5 flex flex-col md:flex-row justify-between items-center text-xs text-gray-400 gap-4">
-                <p>© <span id="current-year"></span> Motel Korpus. Todos os direitos reservados.</p>
+                <p>© <span id="current-year"></span> Korpus Motel. Todos os direitos reservados.</p>
                 <div class="flex items-center gap-2">
                     <a class="vmoode-signature" aria-label="vmoode" style="--vm-color: #99A1AF; --vm-hover: #ffffff;">
                         <svg width="30" height="30" viewBox="0 0 354.49 259.91">
