Atualização do titulo do site.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="O refúgio definitivo para quem busca privacidade e experiências inesquecíveis.">
-    <title>Korpus Motel- Experiência Exclusiva</title>
+    <title>Korpus Motel - Suítes Temáticas, Hidro e Privacidade</title>
 
     <link rel="icon" type="image/svg+xml" href="assets/svgs/favicon.svg">
 
