--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         </div>
                         <img src="/assets/imagens/motel-korpus-suite-arabe.webp"
                             alt="Interior luxuoso com iluminação suave"
-                            class="w-full h-[600px] object-cover filter brightness-75 contrast-125 group-hover:brightness-100 transition-all duration-700 ease-in-out shadow-2xl"
+                            class="w-full h-[350px] md:h-[600px] object-cover filter brightness-75 contrast-125 group-hover:brightness-100 transition-all duration-700 ease-in-out shadow-2xl"
                             loading="lazy">
                         <div
                             class="absolute -bottom-4 -right-4 w-32 h-32 border-b-[1px] border-r-[1px] border-brand-ruby/50 transition-all duration-500 group-hover:w-full group-hover:h-full">
@@ -789,15 +789,12 @@
 
                     <div
                         class="group w-full h-[400px] lg:h-[450px] relative overflow-hidden border-t lg:border-t-0 lg:border-l border-white/5">
-
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.988685352152!2d-38.34977157435982!3d-12.908448594314981!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x716165ac45923e9%3A0xfabecf86985169b2!2sMotel%20Korpus!5e0!3m2!1spt-BR!2sbr!4v1771433937598!5m2!1spt-BR!2sbr"
                             class="w-full h-full map-dark-mode group-hover:!filter-none transition-all duration-1000"
                             style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade">
                         </iframe>
-
-                        <div class="absolute inset-0 z-10 hover:pointer-events-none"></div>
 
                         <div class="absolute inset-0 pointer-events-none border-[16px] border-brand-dark/20 z-20"></div>
                     </div>
