Atualização da tabela de preços e complementação de informações da página inicial.

--- a/index.html
+++ b/index.html
@@ -334,25 +334,30 @@
                                 <div class="flex justify-between items-end">
                                     <span class="text-xs text-gray-400 uppercase tracking-widest">2 Horas</span>
                                     <div class="flex-1 border-b border-white/10 border-dotted mx-3 mb-[5px]"></div>
-                                    <span class="text-lg text-white font-serif">R$ 125</span>
+                                    <span class="text-lg text-white font-serif">R$ 135</span>
                                 </div>
                                 <div class="flex justify-between items-end">
                                     <span class="text-xs text-gray-400 uppercase tracking-widest">4 Horas</span>
                                     <div class="flex-1 border-b border-white/10 border-dotted mx-3 mb-[5px]"></div>
-                                    <span class="text-lg text-white font-serif">R$ 135</span>
+                                    <span class="text-lg text-white font-serif">R$ 155</span>
                                 </div>
                                 <div class="flex justify-between items-end">
                                     <span class="text-xs text-gray-400 uppercase tracking-widest">Pernoite</span>
                                     <div class="flex-1 border-b border-white/10 border-dotted mx-3 mb-[5px]"></div>
-                                    <span class="text-lg text-white font-serif">R$ 165</span>
+                                    <span class="text-lg text-white font-serif">R$ 185</span>
                                 </div>
                                 <div class="flex justify-between items-end">
                                     <span class="text-xs text-gray-400 uppercase tracking-widest">Adicional</span>
                                     <div class="flex-1 border-b border-white/10 border-dotted mx-3 mb-[5px]"></div>
                                     <span class="text-lg text-white font-serif">R$ 35</span>
                                 </div>
+                                <div class="flex justify-between items-end">
+                                    <span class="text-xs text-gray-400 uppercase tracking-widest">Hóspedes adicionais: Acréscimo de 50% sobre o valor da tarifa</span>
+                                </div>
+                                <div class="w-full border-b border-white/10"></div>
                             </div>
                             <div class="flex flex-col items-start gap-y-2 text-xs text-gray-400 flex-1">
+                                
                                 <span>• Ambiente Aconchegante</span>
                                 <span>• Garagem Privativa</span>
                                 <span>• Ar Condicionado</span>
@@ -374,23 +379,27 @@
                                 <div class="flex justify-between items-end">
                                     <span class="text-xs text-gray-400 uppercase tracking-widest">2 Horas</span>
                                     <div class="flex-1 border-b border-white/10 border-dotted mx-3 mb-[5px]"></div>
-                                    <span class="text-lg text-white font-serif">R$ 145</span>
+                                    <span class="text-lg text-white font-serif">R$ 155</span>
                                 </div>
                                 <div class="flex justify-between items-end">
                                     <span class="text-xs text-gray-400 uppercase tracking-widest">4 Horas</span>
                                     <div class="flex-1 border-b border-white/10 border-dotted mx-3 mb-[5px]"></div>
-                                    <span class="text-lg text-white font-serif">R$ 155</span>
+                                    <span class="text-lg text-white font-serif">R$ 175</span>
                                 </div>
                                 <div class="flex justify-between items-end">
                                     <span class="text-xs text-gray-400 uppercase tracking-widest">Pernoite</span>
                                     <div class="flex-1 border-b border-white/10 border-dotted mx-3 mb-[5px]"></div>
-                                    <span class="text-lg text-white font-serif">R$ 175</span>
+                                    <span class="text-lg text-white font-serif">R$ 195</span>
                                 </div>
                                 <div class="flex justify-between items-end">
                                     <span class="text-xs text-gray-400 uppercase tracking-widest">Adicional</span>
                                     <div class="flex-1 border-b border-white/10 border-dotted mx-3 mb-[5px]"></div>
                                     <span class="text-lg text-white font-serif">R$ 40</span>
                                 </div>
+                                <div class="flex justify-between items-end">
+                                    <span class="text-xs text-gray-400 uppercase tracking-widest">Hóspedes adicionais: Acréscimo de 50% sobre o valor da tarifa</span>
+                                </div>
+                                <div class="w-full border-b border-white/10"></div>
                             </div>
                             <div class="flex flex-col items-start gap-y-2 text-xs text-gray-400 flex-1">
                                 <span>• Ambiente Aconchegante</span>
@@ -417,7 +426,7 @@
                                 <div class="flex justify-between items-end">
                                     <span class="text-xs text-gray-400 uppercase tracking-widest">4 Horas</span>
                                     <div class="flex-1 border-b border-white/10 border-dotted mx-3 mb-[5px]"></div>
-                                    <span class="text-xl text-white font-serif">R$ 295</span>
+                                    <span class="text-xl text-white font-serif">R$ 305</span>
                                 </div>
                                 <div class="flex justify-between items-end">
                                     <span class="text-xs text-gray-400 uppercase tracking-widest">Pernoite</span>
@@ -429,6 +438,10 @@
                                     <div class="flex-1 border-b border-white/10 border-dotted mx-3 mb-[5px]"></div>
                                     <span class="text-xl text-white font-serif">R$ 65</span>
                                 </div>
+                                <div class="flex justify-between items-end">
+                                    <span class="text-xs text-gray-400 uppercase tracking-widest">Hóspedes adicionais: Acréscimo de 50% sobre o valor da tarifa</span>
+                                </div>
+                                <div class="w-full border-b border-white/10"></div>
                             </div>
                             <div class="flex flex-col items-start gap-y-2 text-xs text-gray-400 flex-1">
                                 <span>• Ambiente Aconchegante</span>
@@ -459,7 +472,7 @@
                                 <div class="flex justify-between items-end">
                                     <span class="text-xs text-gray-400 uppercase tracking-widest">4 Horas</span>
                                     <div class="flex-1 border-b border-white/10 border-dotted mx-3 mb-[5px]"></div>
-                                    <span class="text-xl text-white font-serif">R$ 295</span>
+                                    <span class="text-xl text-white font-serif">R$ 305</span>
                                 </div>
                                 <div class="flex justify-between items-end">
                                     <span class="text-xs text-gray-400 uppercase tracking-widest">Pernoite</span>
@@ -471,6 +484,10 @@
                                     <div class="flex-1 border-b border-white/10 border-dotted mx-3 mb-[5px]"></div>
                                     <span class="text-xl text-white font-serif">R$ 65</span>
                                 </div>
+                                <div class="flex justify-between items-end">
+                                    <span class="text-xs text-gray-400 uppercase tracking-widest">Hóspedes adicionais: Acréscimo de 50% sobre o valor da tarifa</span>
+                                </div>
+                                <div class="w-full border-b border-white/10"></div>
                             </div>
 
                             <div class="flex flex-col items-start gap-y-2 text-xs text-gray-400 flex-1">
@@ -503,18 +520,22 @@
                                 <div class="flex justify-between items-end">
                                     <span class="text-xs text-gray-400 uppercase tracking-widest">4 Horas</span>
                                     <div class="flex-1 border-b border-white/10 border-dotted mx-3 mb-[5px]"></div>
-                                    <span class="text-lg text-white font-serif">R$ 390</span>
+                                    <span class="text-lg text-white font-serif">R$ 420</span>
                                 </div>
                                 <div class="flex justify-between items-end">
                                     <span class="text-xs text-gray-400 uppercase tracking-widest">Pernoite</span>
                                     <div class="flex-1 border-b border-white/10 border-dotted mx-3 mb-[5px]"></div>
-                                    <span class="text-lg text-white font-serif">R$ 450</span>
+                                    <span class="text-lg text-white font-serif">R$ 480</span>
                                 </div>
                                 <div class="flex justify-between items-end">
                                     <span class="text-xs text-gray-400 uppercase tracking-widest">Adicional</span>
                                     <div class="flex-1 border-b border-white/10 border-dotted mx-3 mb-[5px]"></div>
                                     <span class="text-lg text-white font-serif">R$ 75</span>
                                 </div>
+                                <div class="flex justify-between items-end">
+                                    <span class="text-xs text-gray-400 uppercase tracking-widest">Hóspedes adicionais: Acréscimo de 50% sobre o valor da tarifa</span>
+                                </div>
+                                <div class="w-full border-b border-white/10"></div>
                             </div>
                             <div class="flex flex-col items-start gap-y-2 text-xs text-gray-400 flex-1">
                                 <span>• Ambiente Aconchegante</span>
@@ -547,18 +568,22 @@
                                 <div class="flex justify-between items-end">
                                     <span class="text-xs text-gray-400 uppercase tracking-widest">4 Horas</span>
                                     <div class="flex-1 border-b border-white/10 border-dotted mx-3 mb-[5px]"></div>
-                                    <span class="text-lg text-white font-serif">R$ 390</span>
+                                    <span class="text-lg text-white font-serif">R$ 420</span>
                                 </div>
                                 <div class="flex justify-between items-end">
                                     <span class="text-xs text-gray-400 uppercase tracking-widest">Pernoite</span>
                                     <div class="flex-1 border-b border-white/10 border-dotted mx-3 mb-[5px]"></div>
-                                    <span class="text-lg text-white font-serif">R$ 450</span>
+                                    <span class="text-lg text-white font-serif">R$ 480</span>
                                 </div>
                                 <div class="flex justify-between items-end">
                                     <span class="text-xs text-gray-400 uppercase tracking-widest">Adicional</span>
                                     <div class="flex-1 border-b border-white/10 border-dotted mx-3 mb-[5px]"></div>
                                     <span class="text-lg text-white font-serif">R$ 75</span>
                                 </div>
+                                <div class="flex justify-between items-end">
+                                    <span class="text-xs text-gray-400 uppercase tracking-widest">Hóspedes adicionais: Acréscimo de 50% sobre o valor da tarifa</span>
+                                </div>
+                                <div class="w-full border-b border-white/10"></div>
                             </div>
                             <div class="flex flex-col items-start gap-y-2 text-xs text-gray-400 flex-1">
                                 <span>• Ambiente Aconchegante</span>
@@ -575,7 +600,7 @@
                     </div>
 
                     <div class="text-center mt-12 space-y-2">
-                        <p class="text-sm color-brand-text font-bold uppercase tracking-widest">Pernoite: Das 21h às 12h
+                        <p class="text-sm color-brand-text font-bold uppercase tracking-widest">Pernoite: Das 21h às 12h (Permitida a entrada até as 5h da manhã).
                         </p>
                         <p class="text-sm text-gray-500 font-light italic">* Valores sujeitos a alteração sem aviso prévio.</p>
                     </div>
